# Rust-mol-viewer

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/shaders/: axes.wgsl  billboard.wgsl  ribbon.wgsl  sphere.wgsl  sphere_indirect.wgsl  sphere_raymarch.wgsl  surface.wgsl  surface_raymarch.wgsl  ui_quad.wgsl
crates/mol-app/: Cargo.toml
crates/mol-app/src/: main.rs  model_manager.rs
crates/mol-render/src/: camera.rs  renderer.rs  vr_renderer.rs
crates/mol-render/src/representations/: axes.rs  mod.rs  sphere_raymarch.rs  surface_raymarch.rs
crates/mol-ui/src/: lib.rs  panels.rs
crates/mol-vr/: Cargo.toml
crates/mol-vr/src/: input.rs  lib.rs  session.rs  vulkan_init.rs
scripts/: create_membrane.py  openmm_mdss.py
