[workspace]
members = [
    "crates/pdb-parser",
    "crates/mol-core",
    "crates/mol-render",
    "crates/mol-vr",
    "crates/mol-ui",
    "crates/mol-app",
]
resolver = "2"

[workspace.dependencies]
# Math libraries
glam = { version = "0.29", features = ["bytemuck"] }
nalgebra = "0.33"

# Graphics
wgpu = "22.0"
winit = "0.30"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"

# VR
openxr = "0.19"

# UI
egui = "0.29"
egui-wgpu = "0.29"
egui-winit = "0.29"
rfd = "0.15"  # Native file dialogs

# Parsing and data
nom = "7.1"
rustc-hash = "2.0"

# Utilities
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
parking_lot = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16

[profile.release-fast]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
